// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownMenu - Snapshots > matches snapshot for DropdownMenuTrigger with asChild 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  data-state="closed"
  id="radix-normalized"
  type="button"
>
  Open Menu
</button>
`;

exports[`DropdownMenu - Snapshots > matches snapshot for DropdownMenuTrigger with default props 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  data-state="closed"
  id="radix-normalized"
  type="button"
>
  Open Menu
</button>
`;

exports[`DropdownMenu - Snapshots > matches snapshot for dropdown menu in open state 1`] = `
<button
  aria-controls="radix-normalized"
  aria-expanded="true"
  aria-haspopup="menu"
  data-radix-popper-align="center"
  data-radix-popper-side="bottom"
  data-state="open"
  id="radix-normalized"
  type="button"
>
  Open Menu
</button>
`;
